--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
 <body>
   <div class="main-content">
     {{>header}}
-
+    <p>This site is created by Varun kumar. it uses mapbox.com and darksky.net</p>
     <img class="potrait " src="/img/me.png">
   </div>
   {{!-- <p>created by {{name}}</p> --}}
