--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -12,10 +12,10 @@
   <div class="main-content">
     {{>header}}
 
-    <P>use this site for your weather</P>
+    <P>Use this site for your weather!</P>
     <form>
 
-      <input placeholder="enter your location">
+      <input placeholder="Enter your location">
       <button>search</button>
       <p id='message1'></p>
       <p id='message2'></p>
