added viewport meta tag

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -4,6 +4,7 @@
   <title>about</title>
   <link rel="icon" href="../img/index.png">
   <link rel="stylesheet" href="/css/stylesheet.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <script> src = "./js/app.js"</script>
 </head>
 
