--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -4,6 +4,7 @@
   <title>404</title>
   <link rel="icon" href="../img/index.png">
   <link rel="stylesheet" href="/css/stylesheet.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
