--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,11 +1,15 @@
-{{!-- <!DOCtype html> --}}
+{{!--
+<!DOCtype html> --}}
 <html>
 
 <head>
   <title>weather</title>
   <link rel="icon" href="../img/index.png">
   <link rel="stylesheet" href="/css/stylesheet.css">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  {{!--
+  <link rel="manifest" crossorigin="use-credentials" href="../../manifest.json"> --}}
+  <link rel="manifest" href="../../manifest.json" crossorigin="use-credentials">
 </head>
 
 <body>
